objects/DMAPP__DM_Coach_Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the association of Coach Rules to Quicklinks. The values in this table are accessible through the Dealmaker Admin App.</description>
    <fields>
        <fullName>DMAPP__DM_Coach_Rule__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Coach Rule</label>
        <referenceTo>DMAPP__DM_Coach_Rule__c</referenceTo>
        <relationshipLabel>Coach Quicklinks</relationshipLabel>
        <relationshipName>DM_Coach_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>DMAPP__DM_Quicklink__c</referenceTo>
        <relationshipLabel>Coach Quicklinks</relationshipLabel>
        <relationshipName>DM_Coach_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Coach Quicklink</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__DM_Coach_Rule__c</columns>
        <columns>DMAPP__DM_Quicklink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coach Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coach Quicklinks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>